crates/tracel-mlir-rs/src/dialect/snapshots/mlir_rs__dialect__memref__tests__realloc.snap
---
source: crates/mlir-rs/src/dialect/memref.rs
expression: module.as_operation()
---
module {
  func.func @foo() {
    %alloc = memref.alloc() : memref<8xindex>
    %0 = memref.realloc %alloc : memref<8xindex> to memref<42xindex>
    return
  }
}
