crates/tracel-mlir-rs/src/dialect/snapshots/mlir_rs__dialect__memref__tests__store.snap
---
source: crates/mlir-rs/src/dialect/memref.rs
expression: module.as_operation()
---
module {
  func.func @foo() {
    %alloca = memref.alloca() : memref<index>
    %idx42 = index.constant 42
    memref.store %idx42, %alloca[] : memref<index>
    return
  }
}
