crates/tracel-mlir-rs/src/dialect/snapshots/mlir_rs__dialect__memref__tests__subview.snap
---
source: crates/mlir-rs/src/dialect/memref.rs
expression: module.as_operation()
---
module {
  func.func @foo() {
    %alloc = memref.alloc() : memref<8x8xindex>
    %subview = memref.subview %alloc[0, 0] [4, 4] [1, 1] : memref<8x8xindex> to memref<4x4xindex, strided<[8, 1]>>
    return
  }
}
